[project]
name = "document-rag"
version = "0.1.0"
description = "A PDF Q&A chatbot using Streamlit, LangChain, Google Gemini, and FAISS (RAG)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu==1.13.2",
    "langchain==1.2.10",
    "langchain-community==0.4.1",
    "langchain-core==1.2.18",
    "langchain-google-genai==4.2.1",
    "langchain-openai==1.1.11",
    "langchain-text-splitters==1.1.1",
    "pdfplumber==0.11.9",
    "python-dotenv==1.2.2",
    "streamlit==1.55.0",
]
